Trying to fix skill image width being too big on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2014,7 +2014,6 @@ input, select, textarea {
 			position: relative;
 			margin: 0.25em 0 0.25em 0;
 			padding: 0.5em;
-			width: auto;
 			align-self: center;
 			min-width: 100px;
 			max-width: 50%;	
